# betterCloudDrive

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/gradle/: libs.versions.toml
backend/: .dockerignore  Dockerfile  pom.xml
backend-test/: conftest.py  pyproject.toml
backend-test/scripts/: wait_for_backend.sh
backend-test/tests/: conftest.py  test_admin.py  test_auth.py  test_download.py  test_favorites.py  test_file_versions.py  test_files.py  test_recycle_bin.py  test_shares.py  test_tags.py  test_upload.py
backend-test/tests/data/: sample.txt
backend-test/tests/helpers/: assert_helper.py
backend/betterclouddrive-common/: pom.xml
backend/betterclouddrive-dal/: pom.xml
backend/betterclouddrive-scheduler/: pom.xml
backend/betterclouddrive-service/: pom.xml
backend/betterclouddrive-start/: pom.xml
config/redis/: redis.conf
desktop-client/: .gitignore  README.md  pyproject.toml
desktop-client/src/betterclouddrive_desktop/: __init__.py  app.py
desktop-client/src/betterclouddrive_desktop/api/: __init__.py  client.py
desktop-client/src/betterclouddrive_desktop/models/: __init__.py  api.py  file.py  share.py  tag.py  user.py
desktop-client/src/betterclouddrive_desktop/services/: formatters.py  passwords.py  settings.py  tokens.py  upload.py
desktop-client/src/betterclouddrive_desktop/ui/: file_page.py  login.py  main_window.py  secondary_pages.py  theme.py  widgets.py
desktop-client/src/betterclouddrive_desktop/workers/: __init__.py  task.py
desktop-client/tests/: test_api_client.py  test_formatters.py  test_passwords.py  test_upload.py
docs/: API.md  CONFIGURATION.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.wdio.json  vite.config.ts  vitest.config.ts  wdio.tauri.conf.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: download.rs  lib.rs  main.rs  settings.rs  transfer.rs  upload.rs
observability/: loki-config.yml  otel-collector.yml  promtail-config.yml  tempo-config.yml
redis/: redis.conf
(+450 files in other folders)
