[project]
name = "betterclouddrive-backend-test"
version = "0.1.0"
description = "Black-box API tests for Better Cloud Drive"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "smoke: basic health check tests",
    "public: tests for public endpoints (no auth required)",
    "admin: tests requiring admin role",
]
log_cli = true
log_cli_level = "INFO"
