[project]
name = "betterclouddrive-desktop"
version = "0.1.0"
description = "PySide desktop client for BetterCloudDrive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "keyring>=25.0.0",
]

[project.scripts]
betterclouddrive-desktop = "betterclouddrive_desktop.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

