[package]
name = "betterclouddrive"
version = "0.1.0"
description = "BetterCloudDrive desktop client"
authors = ["BetterCloudDrive"]
edition = "2021"

[package.metadata.bundle]
identifier = "com.betterclouddrive.desktop"
publisher = "BetterCloudDrive"
copyright = "Copyright (c) 2026 BetterCloudDrive"

[lib]
name = "betterclouddrive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", default-features = false, features = ["wry"] }
tauri-plugin-dialog = "2.7.1"
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
tokio = { version = "1.52.3", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.8"
